2013-03-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Document synchronization and testoutputs.

	* man/postgresqlSupport.Rd

2013-03-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Change notation of LICENSE in DESCRIPTION upon request from CRAN

	* LICENSE
	* inst/NEWS
	* inst/ANNOUNCEMENTS
	* inst/TODO

2013-03-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Use system libpq library when available on OS X (darwin)

	* src/configure.in
	* src/configure

2012-12-06  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Test implementation of SQL with parameters.

	* R/PostgreSQLSupport.R
	* src/RS-pgsql-pqexecparams.c
	* tests/dbGetQueryParams.R

2012-10-04  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Bug fix for GC related errro as reported as issue 42.

	* src/RS-DBI.c
	* src/RS-PostgreSQL.c 
	* tests/dbColumnInfo.R

2012-09-18  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Keep consistency of const modifier to const char*

	* src/RS-DBI.c

2012-09-18  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Suppress message when $R_OS_TYPE is unset

	* configure
	* configure.in

2012-04-06  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	For issue 39: use a single equal sign (=) in test string comparison

	* configure
	* configure.in

2012-03-28  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Avoid connection cloning.
	Ensure that BEGIN transaction is meaningfull

	* R/PostgreSQLSupport.R
	* tests/openSendQuery.R
	* tests/dbTransactionTests.R
	* tests/openSendQuery.R	
	* man/dbCommit-methods.Rd

2012-02-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Suppress dbColumnInfo Segmentation fault. RS_DBI_getTypeName() 
	return "UNKNOWN" instead of NULL pointer.

	* src/RS-DBI.h
	* src/RS-DBI.c
	* tests/unknowntypes.R

2012-01-10  Tomoaki NISHIYAMA  <tomoakin@kenroku.kanazawa-u.ac.jp>

	Windows support for r-devel.
	Make libpq.a with ar directly from $(OBJ) not via dll.